v2/infrastructure/cloudflare-tunnel/ingressroute.yaml
# jellyfin-public-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-public
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.shasame.fr`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
---
# seerr-public-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr-public
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`seerr.shasame.fr`)
      kind: Rule
      services:
        - name: seerr
          port: 5055
